# AKL

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  report-user.md
.github/workflows/: format.yml  lint.yml
LICENSES/: LicenseRef-Apache-2.0-NoModNotice.txt
automated/: clang-format-fix.sh  clang-format.sh  clang-tidy-fix.sh  clang-tidy.sh
include/: assert_helper.hpp  dummy.hpp  error_code.hpp  exit.hpp  log.hpp  output.hpp  verbose.hpp
include/input/: cli.hpp
src/: dummy.cpp  exit.cpp  main.cpp  verbose.cpp
src/input/: cli.cpp
